# kuma

./: .gitignore  CMakeLists.txt  Makefile  ast.c  ast.h  codegen.cpp  codegen.h  foo.c  foo.ll  gen.c  gen.h  generate.sh  kuma.c  kuma.h  kuma.l  kuma.y  kuma_lexer.c  kuma_lexer.cpp  kuma_lexer.h  kuma_parser.c  kuma_parser.cpp  kuma_parser.h  kuma_string.cpp  kuma_string.h  kumac.c  lexer.c  lexer.cpp  lexer.h  list.c  list.h  main.cpp  nodes.cpp  nodes.h  opcodes.c  opcodes.h  parser.c  parser.h  table.h  test.c  test.ks  (+4 more)
test/: list_test.c  list_test.h  table_test.h  test.c  test.h
